--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,10 +63,12 @@ jobs:
           RTT_TOOL_CHAIN: ${{ matrix.legs.RTT_TOOL_CHAIN }}
         run: |
           source ~/.env/env.sh
+          scons --pyconfig-silent -C bsp/$RTT_BSP
           sed -i "s/# CONFIG_PKG_USING_COREMARK is not set/CONFIG_PKG_USING_COREMARK=y/g" bsp/$RTT_BSP/.config
           scons --pyconfig-silent -C bsp/$RTT_BSP
           sed -i "s/CONFIG_COREMARK_ITERATIONS=3600/CONFIG_COREMARK_ITERATIONS=36000/g" bsp/$RTT_BSP/.config
+          scons --pyconfig-silent -C bsp/$RTT_BSP
           cat bsp/$RTT_BSP/.config
           pushd bsp/$RTT_BSP && pkgs --update && popd
           scons -C bsp/$RTT_BSP
-          sudo ./bsp/qemu-vexpress-a9/qemu-nographic.bat
+          sudo bsp/qemu-vexpress-a9/qemu-nographic.sh
