--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,4 +71,5 @@ jobs:
           cat bsp/$RTT_BSP/.config
           pushd bsp/$RTT_BSP && pkgs --update && popd
           scons -C bsp/$RTT_BSP
-          sudo bsp/qemu-vexpress-a9/qemu-nographic.sh
+          cd bsp/qemu-vexpress-a9
+          sudo qemu-nographic.sh
