--- a/.github/workflows/tools_coremark.yml
+++ b/.github/workflows/tools_coremark.yml
@@ -66,8 +66,12 @@ jobs:
           source ~/.env/env.sh
           scons --pyconfig-silent -C bsp/$RTT_BSP
           sed -i "s/# CONFIG_PKG_USING_COREMARK is not set/CONFIG_PKG_USING_COREMARK=y/g" bsp/$RTT_BSP/.config
+          sed -i "s/# CONFIG_PKG_USING_RTT_AUTO_EXE_CMD is not set/CONFIG_PKG_USING_RTT_AUTO_EXE_CMD=y/g" bsp/$RTT_BSP/.config
           scons --pyconfig-silent -C bsp/$RTT_BSP
           sed -i "s/CONFIG_COREMARK_ITERATIONS=3600/CONFIG_COREMARK_ITERATIONS=36000/g" bsp/$RTT_BSP/.config
+          
+          sed -i "s/CONFIG_RTT_CMD_1_STR=\"version\"/CONFIG_RTT_CMD_1_STR=\"core_mark\"/g" bsp/$RTT_BSP/.config
+          
           scons --pyconfig-silent -C bsp/$RTT_BSP
           cat bsp/$RTT_BSP/.config
           pushd bsp/$RTT_BSP && pkgs --update && popd
