--- a/.github/workflows/tools_coremark.yml
+++ b/.github/workflows/tools_coremark.yml
@@ -22,12 +22,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: ${{ matrix.legs.RTT_BSP }}
+    name: ${{ matrix.legs.RTT_PACKAGE }}
     strategy:
       fail-fast: false
       matrix:
        legs:
-         - {RTT_BSP: "qemu-vexpress-a9", RTT_TOOL_CHAIN: "sourcery-arm"}
+        - {RTT_PACKAGE: "CONFIG_PKG_USING_COREMARK", RTT_PACKAGE_CMD: "core_mark"}
+        - {RTT_PACKAGE: "CONFIG_PKG_USING_2048", RTT_PACKAGE_CMD: "core_mark"}
+        - {RTT_PACKAGE: "CONFIG_PKG_USING_SNAKE", RTT_PACKAGE_CMD: "core_mark"}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -49,7 +51,6 @@ jobs:
           echo "RTT_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
           echo "RTT_CC=gcc" >> $GITHUB_ENV
       - name: Install Arm ToolChains
-        if: ${{ matrix.legs.RTT_TOOL_CHAIN == 'sourcery-arm' && success() }}
         shell: bash
         run: |
           wget -q https://github.com/RT-Thread/toolchains-ci/releases/download/v1.3/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2
@@ -60,12 +61,11 @@ jobs:
         if: ${{ success() }}
         shell: bash
         env:
-          RTT_BSP: ${{ matrix.legs.RTT_BSP }}
-          RTT_TOOL_CHAIN: ${{ matrix.legs.RTT_TOOL_CHAIN }}
+          RTT_BSP: qemu-vexpress-a9
         run: |
           source ~/.env/env.sh
           scons --pyconfig-silent -C bsp/$RTT_BSP
-          sed -i "s/# CONFIG_PKG_USING_COREMARK is not set/CONFIG_PKG_USING_COREMARK=y/g" bsp/$RTT_BSP/.config
+          sed -i "s/# ${{ matrix.legs.RTT_PACKAGE }} is not set/${{ matrix.legs.RTT_PACKAGE }}=y/g" bsp/$RTT_BSP/.config
           sed -i "s/# CONFIG_PKG_USING_RTT_AUTO_EXE_CMD is not set/CONFIG_PKG_USING_RTT_AUTO_EXE_CMD=y/g" bsp/$RTT_BSP/.config
           scons --pyconfig-silent -C bsp/$RTT_BSP
           sed -i "s/CONFIG_COREMARK_ITERATIONS=3600/CONFIG_COREMARK_ITERATIONS=36000/g" bsp/$RTT_BSP/.config
